src/test/deca/context/valid/affect_int_to_float.deca
// Description:
//    Affectation et typage
//
// Resultats:
//   Affectation possible
// 
// Historique:
//    cree le 01/01/2022

{
   float a;
   int b;

   a = b;
}
