src/test/deca/context/invalid/wrong_assignation2.deca
// Une autre mauvaise assignation

// Date: 20.01.2022

{
    boolean b = 1;
}